--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@ant-design/icons": "^6.0.0",
     "@headlessui/react": "^2.2.3",
     "@heroicons/react": "^2.2.0",
     "@supabase/supabase-js": "^2.49.4",
     "@tailwindcss/vite": "^4.1.7",
+    "antd": "^5.25.2",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
@@ -22,6 +24,7 @@
     "react-dropzone": "^14.3.8",
     "react-hook-form": "^7.56.4",
     "react-router-dom": "^7.6.0",
+    "recharts": "^2.15.3",
     "tailwindcss": "^4.1.7",
     "uuid": "^11.1.0",
     "zustand": "^5.0.4"
