--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@tailwindcss/vite": "^4.1.7",
     "antd": "^5.25.2",
     "autoprefixer": "^10.4.21",
+    "dayjs": "^1.11.13",
     "postcss": "^8.5.3",
     "react": "^19.1.0",
     "react-datepicker": "^8.3.0",
